Added Css and image links so webpage functions

--- a/Wk1 My New Website.html
+++ b/Wk1 My New Website.html
@@ -6,7 +6,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="C:\Users\Steven\Documents\Mini-projects end of week\week1\WK1-My-New-Website.css"
+      href="C:\Users\Steven\Documents\Mini-projects\Week1Miniproject\WK1-My-New-Website.css"
     />
     <title>My Landing Page</title>
   </head>
@@ -32,7 +32,7 @@
         <h1 class="text-center">My New Website</h1>
         <figure class="text-center">
           <img
-            src="C:\Users\Steven\Documents\Mini-projects end of week\week1\image-1.png"
+            src="C:\Users\Steven\Documents\Mini-projects\Week1Miniproject\image-1.png"
             alt="Coming Soon Image"
           />
           <figcaption class="text-center">
